--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "predis/predis": "^2.2",
         "spatie/laravel-permission": "^6.0",
         "tymon/jwt-auth": "^2.0",
-        "wildside/userstamps": "^2.3"
+        "wildside/userstamps": "^2.3",
+        "barryvdh/laravel-dompdf": "^2.0",
+        "dompdf/dompdf": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
